# akkorokamui

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: assets.rs  auth.rs  client.rs  error.rs  lib.rs  order.rs
src/api/: body.rs  builder.rs  mod.rs  private.rs  public.rs
src/client/: async.rs  blocking.rs  builder.rs
