[package]
name = "akkorokamui"
version = "0.1.0"
authors = ["gliderkite <gliderkite@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.13"
hmac = "0.10"
log = "0.4"
percent-encoding = "2.1"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "0.2", features = ["full"] }
