[package]
name = "akkorokamui"
version = "0.1.0"
authors = ["Marco Conte <gliderkite@gmail.com>"]
edition = "2018"
description = "Kraken REST APIs HTTP client"
readme = "README.md"
repository = "https://github.com/gliderkite/akkorokamui"
documentation = "https://docs.rs/akkorokamui"
license = "MIT"
keywords = ["crypto", "kraken", "http", "client"]

[dependencies]
base64 = "0.13"
hmac = "0.10"
log = "0.4"
percent-encoding = "2.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
uuid = { version = "0.8", features = ["v4"] }
